// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup for concern suggestion 1`] = `
<div
  className="background"
  onClick={undefined}
>
  <div
    className="content smallContentPadding"
    onClick={undefined}
  >
    <div
      className="acceptModalContent"
    >
      <div
        className="acceptModalHeader"
      >
        <div
          className="acceptModalDismissButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="acceptModalBody"
      >
        <div
          className="acceptModalTitle"
        >
          Add as active or inactive concern?
        </div>
        <div
          className="acceptModalDropdown"
        >
          <select
            className="select roundedInput"
            name="concernType"
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              value=""
            >
              Select a concern type
            </option>
            <option
              value="active"
            >
              Active concern
            </option>
            <option
              value="inactive"
            >
              Inactive concern
            </option>
          </select>
        </div>
        <div
          className="acceptModalButtons"
        >
          <div
            className="invertedButton rightSmallGutter smallButton"
            onClick={[Function]}
          >
            Cancel
          </div>
          <div
            className="button smallButton"
            onClick={[Function]}
          >
            Add to Care Plan
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders popup for goal suggestion 1`] = `
<div
  className="background"
  onClick={undefined}
>
  <div
    className="content smallContentPadding"
    onClick={undefined}
  >
    <div
      className="acceptModalContent"
    >
      <div
        className="acceptModalHeader"
      >
        <div
          className="acceptModalDismissButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="acceptModalBody"
      >
        <div
          className="acceptModalTitle noMargin"
        >
          Add this goal to a concern
        </div>
        <div
          className="acceptModalSubtitle"
        >
          Select an existing patient concern, a suggested concern, or create a new one
        </div>
        <div
          className="acceptModalDropdown"
        >
          <select
            className="select roundedInput"
            name="concernId"
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              value=""
            >
              Select a concern
            </option>
            <optgroup
              label="New concern"
            >
              <option
                value="new-concern"
              >
                Add a new concern
              </option>
            </optgroup>
          </select>
        </div>
        <div
          className="acceptModalInput hidden"
        >
          <input
            className="input roundedInput"
            name="newConcernTitle"
            onChange={[Function]}
            placeholder="Enter concern title"
            type="text"
            value=""
          />
        </div>
        <div
          className="acceptModalInput hidden"
        >
          <select
            className="select roundedInput"
            name="concernType"
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              value=""
            >
              Select a concern type
            </option>
            <option
              value="active"
            >
              Active concern
            </option>
            <option
              value="inactive"
            >
              Inactive concern
            </option>
          </select>
        </div>
        <div
          className="acceptModalButtons"
        >
          <div
            className="invertedButton rightSmallGutter smallButton"
            onClick={[Function]}
          >
            Cancel
          </div>
          <div
            className="button smallButton"
            onClick={[Function]}
          >
            Add to Care Plan
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
